[gd_scene load_steps=4 format=3 uid="uid://dd568c20ymn4k"]

[ext_resource type="Theme" uid="uid://doqtdb66xr3lh" path="res://Scenes/normal.tres" id="1_dwsjk"]
[ext_resource type="Script" path="res://Scenes/Menus/Pause Menu.gd" id="2_fmtot"]
[ext_resource type="Theme" uid="uid://cb1g4uqcrxru8" path="res://Scenes/exit.tres" id="3_x8yju"]

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
theme = ExtResource("1_dwsjk")
script = ExtResource("2_fmtot")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -237.0
offset_right = 258.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(258, 237)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 100
alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Restart Level
"

[node name="Menu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_x8yju")
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Menu" to="." method="_on_back_to_menu_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Menu" to="." method="_on_back_to_menu_pressed"]
